# BAR-utils

./: Cargo.toml
src/: details.rs  lib.rs  main.rs  search.rs  verse.rs
tests/data/: KJV.ibar
