[package]
name = "biblearchive-utils"
version = "0.1.0-alpha.2"
edition = "2024"
authors = ["Chris Hamer-Hodges <chris.hhodges@gmail.com>"]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "bar"
path = "src/main.rs"

[dependencies]
biblearchive = { path = "../biblearchive"}
clap = { version = "4.5.53", features = ["derive", "env"] }
humansize = "2.1.3"
bible-data = { path = "../bible-data" }
regex = "1.12.2"

[profile.dev.package.lzokay-native]
opt-level = 3
debug-assertions = false
overflow-checks = false
